<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_exit_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:layout_marginVertical="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/sort_dialog_message"
        android:textSize="16sp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/optNameAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_asc" />

        <RadioButton
            android:id="@+id/optNameDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_desc" />

        <RadioButton
            android:id="@+id/optIdAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_id_asc" />

        <RadioButton
            android:id="@+id/optIdDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_id_desc" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/textViewYes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/textViewNo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

    </LinearLayout>

</LinearLayout>