<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmptyDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/SplashScreenImage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="10dp"
            android:src="@drawable/wifi_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:paddingBottom="10dp"
            android:text="@string/no_data_message"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/retry_connection" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>